--- a/project_docs/poster_rubric.rmd
+++ b/project_docs/poster_rubric.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Grading rubric: Poster rubric"
-author: "STAT 446/646 Introduction to Bayesian Statistics (Spring 2020)"
-date: "02/10/2020"
+author: "STAT 446/646 Introduction to Bayesian Statistics (Spring 2021)"
+date: "04/19/2021"
 output: html_document
 ---
 
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE)
 
 ```{r, echo = FALSE}
 text_tbl <- data.frame(
-  `Point Value Label` = c("Computation: Perform computations necessary for the data analysis", "Analysis: Choose and carry out analysis appropriate for data and context. MUST USE BAYESIAN STATISTICS!", "Synthesis: Bring together the analysis and interpret results in context", "Visual: Communicate findings graphically clearly, precisely, and concisely", "Written: Communicate findings in writing clearly, precisely, and concisely"),
+  `Point Value Label` = c("Computation: Perform computations necessary for the data analysis", "Analysis: Choose and carry out analysis appropriate for data and context using the techniques you learned our textbook.", "Synthesis: Bring together the analysis and interpret results in context", "Visual: Communicate findings graphically clearly, precisely, and concisely", "Written: Communicate findings in writing clearly, precisely, and concisely"),
   `Needs Improvement` = c("Computations contain errors and extraneous code.", "Choice of analysis is overly simplistic, irrelevant, inappropriate for the data, or missing key component(s).", "Conclusions are missing, incorrect, or unsupported.", "Inappropriate choice of plots; poorly labeled plots; plots missing.", "Explanation is illogical, incorrect, or incoherent."),
   `Basic` = c("Computations correct but contain extraneous code/poorly organized/uncommented.","Analysis appropriate, but incomplete and important features and assumptions not made explicit","Conclusions are reasonable, but partially correct or partially complete.","Plots convey information correctly but lack context for interpretation.","Explanation is partially correct but incomplete or unconvincing."),
   `Exceeds standards` = c("Computations correct, clear, and properly labeled.","Analysis appropriate, complete, advanced, relevant, and informative.","Relevant conclusions explicitly connected to analysis and context.","Plots convey information correctly with adequate and appropriate connections.","Explanation is correct, complete, and convincing."),
