--- a/meeting_agendas/23_ch19_multLinReg.Rmd
+++ b/meeting_agendas/23_ch19_multLinReg.Rmd
@@ -35,19 +35,31 @@ set.seed(04262021)
 
 *Please contribute questions and comments*
 
-## Discuss Ch.17 HW
+## Discuss Ch.17,18 HW
 
-17.3. It was a 2-sample t-test!
+- 17.3. It was a 2-sample t-test!
+- 18.3 It a credible region not interval. 
 
 ## Final Exam: Application.
 
 - I've assessed your skills on each topic via HW and 3 midterms.
-- Let's discuss the rubric and guidelines (located in Canvas).
 - Now I'd like you to apply your knowledge/skills to produce a scientific poster.
-- You may use powerpoint but it is possible using using `rmarkdown`. See `postr` or `posterdown`. See [https://gist.github.com/Pakillo/4854e5d760351206084f6be8abe476b2](https://gist.github.com/Pakillo/4854e5d760351206084f6be8abe476b2).
 - Let's look at a model poster: alex_k_bayes_freq_presentation.pdf. I would say it has a little too much prose for a poster. Bullet points are good. Nice viz and model.
-- Keep it simple, your project doesn't need to be complicated like the 646-level poster above. 
-- Select or generate your data right away! Talk to me for guidance.
+- Let's discuss the rubric and guidelines (located in Canvas).
+- You may use powerpoint but it is possible using using `rmarkdown`. See `postr` or `posterdown`. See [https://gist.github.com/Pakillo/4854e5d760351206084f6be8abe476b2](https://gist.github.com/Pakillo/4854e5d760351206084f6be8abe476b2).
+
+## Final Exam Introduction
+
+- Keep it simple, your project doesn't need to be complicated! I'm only given you a limited time to reduce the workload and see how well you can apply what you have learned.
+- Select or generate your topic/data asap!
+- Use Bayesian modeling and techniques from our textbook to answer a scientific question.
+
+## Final Exam Introduction
+
+- Informal Zoom poster session on our last day 3 May 2021. This is mainly to get feedback from your peers and myself. This should result in catching any errors and polishing presentation.
+- The purpose is to discuss the projects and get feedback in time to make adjustments.
+- No one is judging or grading you. This is supposed to be fun and educational.
+- I will give replace your lowest HW grade with a participation grade for showing up prepared and being an active, respectful participant.
 
 # Bayesian Inference for Multiple Normal Linear Regression Model (Ch. 19)
 
@@ -64,8 +76,8 @@ example(bayes.lm)
 
 ## Final HW: Ch.19 1-5 
 
-- Execute the code and think/understand the problem for 19.1-19.3. Present, nterpret and discuss the results.
-- 19.4 description is lacking. The goal is to model `bwt` as a function of the all predictors (covariates). Use the formula `bwt ~ .`. Note that the prior expects a list. See the example in `bayes.lm` for example use. Don't forget there is a prior for the intercept $\beta_0$!. **Interpret the output a little for me*.
+- Execute the code and think/understand the problem for 19.1-19.3. Present, interpret and discuss the results.
+- 19.4 description is lacking. The goal is to model `bwt` as a function of the all predictors (covariates). Use the formula `bwt ~ .`. Note that the prior expects a list. See the example in `bayes.lm` for example use. Don't forget there is a prior for the intercept $\beta_0$!. **Interpret the output for me**.
 - 19.5 Use chi-squared test from Ch.18 (see 18.3 part iii for an example). Use `post.mean` and `post.var`.
 
 ## Closing (5 min)
