--- a/meeting_agendas/24_ch20_CompBayes.Rmd
+++ b/meeting_agendas/24_ch20_CompBayes.Rmd
@@ -71,23 +71,23 @@ Discuss text examples and figures briefly
 
 ## The Metropolis-Hastings Algorithm (1970)
 
-From Rizzo 2006,
-
 The *Metropolis-Hastings sampler* generates a Markov chain $\{X_0, X_1, \ldots \}$ as follows:
 
 1. Choose a proposal distribution $g(\cdot | X_t)$, subject to regularity conditions discussed below.  
 2. Generate $X_0$ from distribution $g$.  
 3. Repeat (until chain has convergened to a stationary distribution):  
-	(a) Generate $Y$ from $g(\cdot | X_t)$.  
-	(b) Generate $U$ from Uniform(0,1).
-	(c) If  
+	A. Generate $Y$ from $g(\cdot | X_t)$.  
+	B. Generate $U$ from Uniform(0,1).  
+	C. If  
 	$$
 	U \leq \frac{f(Y)g(X_t|Y)}{f(X_t)g(Y|X_t)}
 	$$
 accept $Y$ and set $X_{t+1} = Y$; otherwise set $X_{t+1} = X_t$.  
-	(d) Increment $t$.
+	D. Increment $t$.
 
-Observe that in step (3c) the candidate point $Y$ is accepted with probability
+
+
+Observe that in step (3D) the candidate point $Y$ is accepted with probability
 	$$
 	\alpha (X_t, Y) = min \left( 1, \frac{f(Y)g(X_t|Y)}{f(X_t)g(Y|X_t)} \right),
 	$$
